# MedAgent

./: .env.example  .gitignore  README.md  login.py  pyproject.toml  requirements.txt  webui.py
auth/: __init__.py
config/: settings.py
docs/: project-resume.md
docs/plans/: 2026-06-16-harness-execution-engine.md
eval/: run_ragas_eval.py
frontend/: index.html  script.js  style.css
src/medrag/: __init__.py  prompts.py
src/medrag/app/: auth_manager.py  chat_page.py  dependencies.py  document_store.py  main.py  schemas.py  server.py  session_store.py
src/medrag/app/api/: auth.py  chat.py  documents.py  sessions.py
src/medrag/auth/: __init__.py  credentials.py
src/medrag/config/: settings.py
src/medrag/data/: __init__.py  case_parser.py  case_summary.py  text_cleaner.py  toyhom_loader.py
src/medrag/harness/: __init__.py  orchestrator.py  types.py  wrappers.py
src/medrag/infrastructure/: health.py
src/medrag/llm/: __init__.py  clients.py
src/medrag/memory/: __init__.py  classifier.py  graph_memory.py  long_term.py  preference.py  short_term.py  types.py
src/medrag/ner/: __init__.py
src/medrag/rag/: __init__.py  answer_generator.py  prompt_builder.py  safety_guard.py
src/medrag/react/: engine.py  rag_tool.py  tools.py
src/medrag/retrieval/: __init__.py  hybrid_retriever.py  intent.py  kg_retriever.py  reranker.py  router.py
src/medrag/service/: __init__.py  chat_service.py
src/medrag/tools/: department_guide.py
src/medrag/vectors/: __init__.py  build_toyhom_index.py  embedding.py  eval_retrieval_strategies.py  milvus_client.py  qa_retriever.py  toyhom_retriever.py
tests/: test_answer_layer.py  test_harness_integration.py  test_harness_orchestrator.py  test_harness_types.py  test_harness_wrappers.py  test_memory_system.py  test_resilience.py
vector_store/: build_toyhom_index.py  embedding.py  milvus_client.py  toyhom_retriever.py
