[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "medagent"
version = "2.0.0"
description = "Medical AI Agent — 记忆、路由、ReAct 推理、优雅降级"
requires-python = ">=3.10"
dependencies = [
    "elasticsearch>=9.4.1",
    "fastapi>=0.137.1",
    "httpx>=0.28.1",
    "ollama>=0.6.2",
    "openai>=2.41.1",
    "py2neo>=2021.2.4",
    "pymilvus>=3.0.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.5.1",
    "sse-starlette>=3.4.4",
    "uvicorn>=0.49.0",
    "zhipuai>=2.1.5.20250825",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
